--- a/templates/main/post.html
+++ b/templates/main/post.html
@@ -97,7 +97,7 @@
                                             <i class="material-icons prefix">mode_edit</i>
                                             <textarea class="materialize-textarea" id="comment-input"></textarea>
                                             <label for="comment-input">发表你的评论</label>
-                                            <a class="btn green lighten-3 right disabled">发表(评论功能暂时关闭)</a>
+                                            <a class="btn green lighten-3 right" id="comment-publish-btn">发表(评论功能暂时关闭)</a>
                                         </div>
                                     </div>
 
@@ -234,4 +234,27 @@
 
 {% block additional-js %}
     <script src="{% static 'main/js/post.js' %}" rel="stylesheet"></script>
+    <script>
+        $(document).ready(function () {
+            // 为发表评论按钮添加响应
+            $('#comment-publish-btn').click(function () {
+                var obj;
+                obj.sender = {{ user_pk }};
+                obj.post = {{ post.pk }};
+                obj.level = 1;
+                obj.context = $('#comment-input').val();
+                $.ajax({
+                    url: 'http://www.kindemh.cn/publish_comment',
+                    type: 'post',
+                    data_type: 'json',
+                    async: true,
+                    data: JSON.stringify(obj),
+                    complete: function (jsonObj) {
+                        if (jsonObj.state === true)
+                            alert('发表成功');
+                    }
+                })
+            });
+        });
+    </script>
 {% endblock %}
