--- a/templates/main/post.html
+++ b/templates/main/post.html
@@ -238,13 +238,12 @@
         $(document).ready(function () {
             // 为发表评论按钮添加响应
             $('#comment-publish-btn').click(function () {
-                alert('btn被点击')
-
                 var obj = {};
                 obj.sender = {{ user_pk }};
                 obj.post = {{ post.pk }};
                 obj.level = 1;
                 obj.context = $('#comment-input').val();
+                alert(JSON.stringify(obj));
                 $.ajax({
                     url: 'http://www.kindemh.cn/publish_comment',
                     type: 'post',
@@ -252,7 +251,7 @@
                     async: true,
                     data: JSON.stringify(obj),
                     complete: function (jsonObj) {
-                        al
+                        alert('发表完成');
                         if (jsonObj.state === true)
                             alert('发表成功');
                     }
