--- a/templates/main/post.html
+++ b/templates/main/post.html
@@ -245,11 +245,11 @@
                 obj.context = $('#comment-input').val();
                 $.ajax({
                     url: 'http://www.kindemh.cn/publish_comment',
-                    type: 'POST',
-                    data_type: 'json',
+                    method: 'POST',
+                    dataType: 'json',
                     async: true,
                     data: JSON.stringify(obj),
-                    complete: function (jsonObj) {
+                    success: function (jsonObj) {
                         alert(jsonObj);
                         if (jsonObj.state === true)
                             alert('发表成功');
