--- a/templates/base.html
+++ b/templates/base.html
@@ -72,7 +72,7 @@
                 <div class="col s12 m6 l4 xl4">
                     <h4>友情链接</h4>
                     <ul>
-                        <li><a href="http://chestnut-phoenix.xyz/">栗子木凤凰芯</a></li>
+                        <li><a class="white-text" href="http://chestnut-phoenix.xyz/">栗子木凤凰芯</a></li>
                     </ul>
                 </div>
             </div>
