--- a/templates/base.html
+++ b/templates/base.html
@@ -55,7 +55,7 @@
                 <div class="col s12 m6 l4 xl4">
                     <h4>联系方式</h4>
                     <p>QQ: 461425614<br>
-                        邮箱: <a href="mailto:461425614@qq.com" class="white-text">461425614@qq.com</a>
+                        邮箱: <a href="mailto:461425614@qq.com" class="white-text">461425614@qq.com</a><br>
                         <a class="white-text" href="mailto:461425614@qq.com">交换友链</a>
                     </p>
                     <br>
