--- a/templates/base.html
+++ b/templates/base.html
@@ -73,6 +73,7 @@
                     <h4>友情链接</h4>
                     <ul>
                         <li><a class="white-text" href="http://chestnut-phoenix.xyz/">栗子木凤凰芯</a></li>
+                        <li><a class="white-text" href="http://www.architecy.com/">网站架构-架构师记录点滴</a></li>
                     </ul>
                 </div>
             </div>
